Resolve letter-spacing

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -25,7 +25,7 @@ body {
   font-family: var(--font-family-montserrat);
   font-size: var(--font-size-body);
   line-height: 1.5;
-  letter-spacing: -0.45px;
+  letter-spacing: -0.01em;
   overflow-x: hidden;
 }
 
