--- a/assets/scss/_link.scss
+++ b/assets/scss/_link.scss
@@ -1,6 +1,5 @@
 .link {
   color: var(--mpc-text);
-  letter-spacing: -0.01em;
   text-decoration: underline;
   border: none;
   background-color: transparent;
